Handle multiple components: Fix travis docker build issue
Travis docker build triggers external_example. This commit adds
changes to external_example to support new interface.

--- a/external_example/plugins/example/CMakeLists.txt
+++ b/external_example/plugins/example/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(dronecore_example SHARED
 
 include_directories(
     ${CMAKE_SOURCE_DIR}/core
+    ${CMAKE_SOURCE_DIR}/external_example/
     SYSTEM ${CMAKE_SOURCE_DIR}/third_party/mavlink/include
 )
 
