Handle multiple components: Add integration test
This adds integration test to verify whether DroneCore can
recognize different type of components. Below is the procedure
to test it.
1. Connect a camera to Linux system
2. Launch Camera streaming Daemon
3. Launch PX4 SITL
4. Run SitlTest.DiscoverOneAutopilotAndCamera test
The test discovers two componets (autopilot and camera).

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --verbose)
 # This includes all GTests that run integration tests
 add_executable(integration_tests_runner
     ../core/unittests_main.cpp
+    multi_component_discovery.cpp
     simple_connect.cpp
     async_connect.cpp
     telemetry_simple.cpp
